--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Projeto redes sociais</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <h1>Olá, mundo!</h1>
+        <main>
+            <section id="telefone">
+
+            </section>
+            <section id="redes-sociais">
+
+            </section>
+        </main>
 </body>
 </html>
