criei botões na lateral

--- a/estilos/home.html
+++ b/estilos/home.html
@@ -16,9 +16,10 @@
     {
         width: 100vw;
         height: 100vh;
-        background: black url('imagens/tela-home.jpg') no-repeat top center;
+        position: fixed;
         background-size: cover;
-    }
+        background: black url('imagens/tela-home.jpg') no-repeat top center;
+    }       
 </style>
 <body>
     
