--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Projeto redes sociais</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <title>Projeto redes sociais</title>
 </head>
 <body>
         <main>
             <section id="telefone">
-                <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+                <iframe src="home.html" name="tela" id="tela" 
+                frameborder="0">
+                    Seu navegador não é compatível com isso. 
+                </iframe>
 
             </section>
             <section id="redes-sociais">
-
+                <a href="" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
+                <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
+                <a href="" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
+                <a href="" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+                <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
+                <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
             </section>
         </main>
 </body>
