--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
                 <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
                 <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
-                <a href="imagens/logo-instagram.jpg" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
-                <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
+                <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+                <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
             </section>
         </main>
 </body>
