inseri minhas imagens ao invés das imagens do guanabara

--- a/facebook.html
+++ b/facebook.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="facebook">
+    <img src="imagens/facebook-me2.jpeg" alt="facebook">
     <a href="https://www.facebook.com/denissousab" target="_blank">ACESSE</a>
 </body>
 </html>
