--- a/github.html
+++ b/github.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos\social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="GitHub">
+    <img src="imagens/github-m3.jpeg" alt="GitHub">
     <a href="https://github.com/thedeniis" target="_blank">ACESSE</a>
 </body>
 </html>
