--- a/youtube.html
+++ b/youtube.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
+    <img src="imagens/youtube-me.jpeg" alt="youtube">
     <a href="https://www.youtube.com/playlist?list=PLSaKuGF2O-XcyRBe0NBWeYjXBd1cqrjHd" target="_blank">ACESSE</a>
 </body>
 </html>
